created and fiXeD typ0s, got canvas on index, observed objects, ate orange

--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>fuzzy winner</title>
+
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
-    <header>nav</header>
-    <div class="game_info">
-    <div id="player_1" class="left">
-      <p>Score: 0</p>
-      <p>High Score: 0</p>
-    </div>
-    <div class="game_controls">
-      <p>game controls placeholder</p>
-    </div>
-    <div id="player_2" class="right">
-      <p>Score: 0</p>
-      <p>High Score: 0</p>
-    </div>
-  </div>
+    <header class="game_info">
+      <div id="player_1" class="left">
+        <p>Score: 0</p>
+        <p>High Score: 0</p>
+      </div>
+      <div class="game_controls">
+        <p>game controls placeholder</p>
+      </div>
+      <div id="player_2" class="right">
+        <p>Score: 0</p>
+        <p>High Score: 0</p>
+      </div>
+    </header>
     <main>
       <canvas id="canvas"></canvas>
     </main>
