--- a/index.html
+++ b/index.html
@@ -3,33 +3,85 @@
   <head>
     <meta charset="utf-8">
     <title>fuzzy winner</title>
-
+    <!--Import Google Icon Font-->
+    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <!--Let browser know website is optimized for mobile-->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
     <header>
-      <div id="player_1" class="left game_info">
-        <p class="player_1">Player 1</p>
-        <p>Score: 0</p>
-        <p>High Score: 0</p>
-      </div>
-      <div class="game_controls game_info">
-        <p>game controls placeholder</p>
-      </div>
-      <div id="player_2" class="right game_info">
-        <p class="player_2">Player 2</p>
-        <p>Score: 0</p>
-        <p>High Score: 0</p>
+      <div class="container flow-text black">
+        <div class="row section">
+          <!-- <div class=""> -->
+            <div id="player_1" class="col s4 l4 left game_info">
+              <p class="player_1">Player 1</p>
+              <p>Score: 0</p>
+              <p>High Score: 0</p>
+            </div>
+          <!-- </div> -->
+          <!-- <div class=""> -->
+            <div class="col s4 l4 game_controls game_info ">
+              <button type="button" id="new_game" class="waves-effect waves-light btn">New Game</button>
+              <!-- Switch -->
+              <div class="switch">
+                <p>Player Mode</p>
+                <label class="flow-text">
+                  1
+                  <input type="checkbox">
+                  <span class="lever"></span>
+                  2
+                </label>
+              </div>
+            </div>
+          <!-- </div> -->
+          <!-- <div class=""> -->
+            <div id="player_2" class="col s4 l4 right game_info ">
+              <p class="player_2">Player 2</p>
+              <p>Score: 0</p>
+              <p>High Score: 0</p>
+            </div>
+          <!-- </div> -->
+        </div>
       </div>
     </header>
     <main>
-      <canvas id="canvas"></canvas>
+      <div class="container">
+        <div class="row">
+          <!-- <div class="col s12"> -->
+            <canvas id="canvas" class="col s12"></canvas>
+          <!-- </div> -->
+        </div>
+      </div>
     </main>
-    <footer><span id="about">About</span> <p>put the footer here</p></footer>
+    <footer class="page-footer black">
+      <div class="container">
+        <div class="row">
+          <div class="col s2 l1">
+            <p class="flow-text"><span id="about">About</span></p>
+          </div>
+          <div class="col s6 offset-s4 l11">
+            <div class="fixed-action-btn">
+              <a class="btn-floating btn-large red">
+                <i class="large material-icons">@</i>
+              </a>
+              <ul>
+                <li><a class="btn-floating red"><i class="material-icons">Flickr</i></a></li>
+                <li><a class="btn-floating yellow darken-1"><i class="material-icons">Linkedin</i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
     <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
         integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
         crossorigin="anonymous"></script> -->
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
