--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
-    <header class="#78909c blue-grey lighten-1 white-text flow-text">
-      <div class="container black">
+    <header class="#78909c blue-grey lighten-1 white-text">
+      <div class="container black flow-text">
         <div class="row">
           <!-- <div class=""> -->
             <div id="player_1" class="col s4 m4 left game_info">
@@ -27,9 +27,9 @@
             <div class="col s4 m4 game_controls game_info">
               <button type="button" id="new_game" class="waves-effect waves-light btn">New Game</button>
               <!-- Switch -->
-              <div class="switch">
-                <p>Player Mode</p>
-                <label class="flow-text">
+              <div class="switch flow-text">
+                <p>Game Mode</p>
+                <label >
                   1
                   <input type="checkbox">
                   <span class="lever"></span>
@@ -57,12 +57,12 @@
         </div>
       </div>
     </main>
-    <footer class="page-footer #78909c blue-grey lighten-1 white-text ">
+    <footer class="page-footer #78909c blue-grey lighten-1 white-text">
       <div class="container">
         <div class="row">
-          <div class="col s2 ">
+          <div class="col s12">
             <!-- Modal Trigger -->
-            <a class="waves-effect waves-light btn-flat modal-trigger" href="#modal1"><span class="about bold">About</span></a>
+            <a class="waves-effect waves-light btn-flat modal-trigger" href="#modal1"><span class="about">About</span></a>
             <!-- Modal Structure -->
             <div id="modal1" class="modal bottom-sheet">
               <div class="modal-content black">
@@ -70,10 +70,10 @@
                 <ul>
                   <li>Use the keyboard to move the player to the object.</li>
                   <li>While in the "Safe Zone" click the object to "collect" the object.</li>
-                  <li>BECAREFUL not to run into objects you can pick up - GAME OVER.</li>
-                  <li>Take your "colleted" objects to the "proper disposal" area.</li>
-                  <li>BECAREFUL not to run into static objects, you may drop "collected" objects.</li>
-                  <li>10 points opens the next level.</li>
+                  <li>WARNING: not to run into objects you can pick up - GAME OVER.</li>
+                  <li>Take your "collected" objects to the "proper disposal" area.</li>
+                  <li>CAUTION: avoid running into static objects, you may drop "collected" objects.</li>
+                  <li>Obtaining 10 points unlocks the next level.</li>
                   <li>If the game gets 10 points the game wins.</li>
                 </ul>
               </div>
@@ -81,9 +81,8 @@
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Got it..!</a>
               </div>
             </div>
-            <!-- <p class="flow-text"></p> -->
-          </div>
-          <div class="col s10">
+          <!-- </div> -->
+          <!-- <div class="col s10"> -->
             <div class="fixed-action-btn">
               <a class="btn-floating btn-large black">
                 <i class="large material-icons">contacts</i>
