--- a/index.html
+++ b/index.html
@@ -3,81 +3,83 @@
   <head>
     <meta charset="utf-8">
     <title>fuzzy winner</title>
-    <!--Import Google Icon Font-->
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import Local CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
-    <header class="#78909c blue-grey lighten-1 white-text">
+    <header class="blue-grey lighten-1 white-text">
       <div class="container black flow-text">
         <div class="row">
           <!-- <div class=""> -->
-            <div id="player_1" class="col s4 m4 left game_info">
+            <div id="player_1" class="col s4 m4 leftSide game_info">
               <p class="player_1">Player 1</p>
-              <p>Score: 0</p>
-              <p>High Score: 0</p>
+              <p id="player_1_score">Score: 0</p>
+              <p id="player_1_status">Level: 0</p>
             </div>
           <!-- </div> -->
           <!-- <div class=""> -->
-            <div class="col s4 m4 game_controls game_info">
-              <button type="button" id="new_game" class="waves-effect waves-light btn">New Game</button>
+            <div class="col s4 m4 game_controls game_info amber lighten-1">
               <!-- Switch -->
-              <div class="switch flow-text">
-                <p>Game Mode</p>
-                <label >
+              <div class="switch game_controls">
+                <p class="flow-text black-text">Game Mode</p>
+                <label class="flow-text">
                   1
                   <input type="checkbox">
-                  <span class="lever"></span>
+                  <span class="lever black"></span>
                   2
                 </label>
               </div>
+              <button type="button" id="new_game" class="purple waves-effect waves-light btn">New Game</button>
             </div>
           <!-- </div> -->
           <!-- <div class=""> -->
-            <div id="player_2" class="col s4 m4 right game_info">
+            <div id="player_2" class="col s4 m4 rightSide game_info">
               <p class="player_2">Player 2</p>
-              <p>Score: 0</p>
-              <p>High Score: 0</p>
+              <p id="player_2_score">Score: 0</p>
+              <p id="player_2_status">High Score: 0</p>
             </div>
           <!-- </div> -->
         </div>
-      </div>
+      <!-- </div> -->
+
     </header>
-    <main>
-      <div class="container">
-        <div class="row">
+    <main class="row">
+      <!-- <div class="container"> -->
+        <!-- <div class="row"> -->
           <!-- <div class="col s12"> -->
-            <canvas id="canvas" class="col s12"></canvas>
+            <canvas id="canvas" class="canvas col s12"></canvas>
           <!-- </div> -->
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> -->
     </main>
-    <footer class="page-footer #78909c blue-grey lighten-1 white-text">
-      <div class="container">
+    <footer class="page-footer blue-grey lighten-1">
+
+      <!-- <div class="container"> -->
         <div class="row">
-          <div class="col s12">
+          <div class="col s12 l2">
             <!-- Modal Trigger -->
-            <a class="waves-effect waves-light btn-flat modal-trigger" href="#modal1"><span class="about">About</span></a>
+            <a class="waves-effect waves-light btn-flat modal-trigger amber lighten-1" href="#modal1"><span class="about">About</span></a>
             <!-- Modal Structure -->
             <div id="modal1" class="modal bottom-sheet">
-              <div class="modal-content black">
+              <div class="modal-content black white-text">
                 <h4>About the Game</h4>
                 <ul>
-                  <li>Use the keyboard to move the player to the object.</li>
+                  <li><i class="material-icons">directions_run</i>Use the keyboard to move the player to the object.</li>
                   <li>While in the "Safe Zone" click the object to "collect" the object.</li>
                   <li>WARNING: not to run into objects you can pick up - GAME OVER.</li>
-                  <li>Take your "collected" objects to the "proper disposal" area.</li>
+                  <li><i class="material-icons">directions_run</i>Take your "collected" objects to the "proper disposal" area.</li>
                   <li>CAUTION: avoid running into static objects, you may drop "collected" objects.</li>
                   <li>Obtaining 10 points unlocks the next level.</li>
                   <li>If the game gets 10 points the game wins.</li>
                 </ul>
               </div>
-              <div class="modal-footer">
+              <div class="modal-footer amber lighten-1">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Got it..!</a>
               </div>
             </div>
@@ -89,7 +91,7 @@
               </a>
               <ul>
                 <li><a class="btn-floating red pulse"><i class="material-icons">photo_library</i></a></li>
-                <li><a class="btn-floating yellow darken-1 pulse"><i class="material-icons">smoke_free</i></a></li>
+                <li><a class="btn-floating purple pulse"><i class="material-icons">smoke_free</i></a></li>
                 <li><a class="btn-floating green pulse"><i class="material-icons">beach_access</i></a></li>
                 <li><a class="btn-floating blue pulse"><i class="material-icons">info</i></a></li>
                 <li><a class="btn-floating black pulse"><i class="material-icons">directions_run</i></a></li>
@@ -99,12 +101,16 @@
         </div>
       </div>
     </footer>
+
+    <!--Import minified jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <!--Import minified jQuery UI -->
     <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
         integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
         crossorigin="anonymous"></script> -->
-    <!-- Compiled and minified JavaScript -->
+    <!-- Compiled and minified JavaScript for Materalize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!--Import local JavaScript file -->
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
