reset process and reworked prototype - added some basic functions for game play 2b written

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <!-- Compiled and minified JavaScript for Materalize -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <!--Import local JavaScript file -->
-    <script type="text/javascript" src="js/script.js"></script>
+    <!-- <script type="text/javascript" src="js/script.js"></script> -->
+    <script type="text/javascript" src="js/script_2.js"></script>
   </body>
 </html>
