working on the game logic, have randomized objects being draw on screen, movable component, clean up data structures and found a way to flatline_______object generation

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <!-- <div class="container"> -->
         <!-- <div class="row"> -->
           <!-- <div class="col s12"> -->
-            <canvas id="canvas" class="canvas col s12"></canvas>
+          <!-- <canvas id="canvas" class="canvas col s12"></canvas> -->
+          <canvas id="canvas" class="canvas"></canvas>
           <!-- </div> -->
         <!-- </div> -->
       <!-- </div> -->
