debugged issues with spawning

--- a/index.html
+++ b/index.html
@@ -128,5 +128,7 @@
     <!--Import local JavaScript file -->
     <!-- <script type="text/javascript" src="js/script.js"></script> -->
     <script type="text/javascript" src="js/script_2.js"></script>
+    <!-- <script type="text/javascript" src="js/script_3.js"></script> -->
+    <!-- <script type="text/javascript" src="js/script_2a.js"></script> -->
   </body>
 </html>
