--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
     <!--Import local JavaScript file -->
     <!-- <script type="text/javascript" src="js/script.js"></script> -->
     <script type="text/javascript" src="js/script_2.js"></script>
-    <!-- <script type="text/javascript" src="js/script_3.js"></script> -->
-    <!-- <script type="text/javascript" src="js/script_2a.js"></script> -->
+    <!-- <script type="text/javascript" src="js/script_2b.js"></script> -->
   </body>
 </html>
