reworking entire project - inital commit

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     <!--Import local JavaScript file -->
     <!-- <script type="text/javascript" src="js/script.js"></script> -->
-    <script type="text/javascript" src="js/script_2.js"></script>
+    <!-- <script type="text/javascript" src="js/script_2.js"></script> -->
     <!-- <script type="text/javascript" src="js/script_2b.js"></script> -->
+    <script type="text/javascript" src="js/script_final.js"></script>
   </body>
 </html>
