fixed bug in game over

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   2
                 </label>
               </div>
-              <button type="button" id="new_game" class="purple waves-effect waves-light btn">New Game</button>
+              <button type="button" id="new_game" class="purple waves-effect waves-light btn" onclick="startNewGame">New Game</button>
             </div>
           <!-- </div> -->
           <!-- <div class=""> -->
