--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="black-text">
             <p class="flow-text">Game</p>
             <p class="flow-text">Level: <span id="game_level">0</span></p>
-            <button type="button" class="purple waves-effect waves-light btn tooltipped flow-text hide-on-small-only" data-tooltip="Start or Pause Game" data-position="top" onclick="pauseGame()">Start/Pause</button>
+            <button type="button" class="purple waves-effect waves-light btn tooltipped flow-text hide-on-small-only" data-tooltip="Start or Pause Game" data-position="top" onclick="pauseGame()"><i class="material-icons">pause</i><i class="material-icons">play_arrow</i></button>
             </div>
           </div>
           <div id="player_" class="col s4 m4 player_ game_info">
@@ -75,7 +75,7 @@
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Got it..!</a>
               </div>
             </div>
-            <div class="scale-out fixed-action-btn">
+            <div class="fixed-action-btn">
               <a class="btn-floating btn-large black">
                 <i class="large material-icons">info</i>
               </a>
