must have forgotten to commit

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
               <h5>Game Controls</h5>
           </div>
           <div class="hide-on-small">
-              <h5>Player</h5>
-              <p class="player_ white-text flow-text">Score: <span id="player_score">0</span> Health: <span id="player_health">0</span> Full Poop Bags: <span id="player_poo_count">0</span></p>
+              <!-- <h5>Player</h5> -->
+              <p class="player_ white-text flow-text">Player Score: <span id="player_score">0</span> Health: <span id="player_health">0</span> Full Poop Bags: <span id="player_poo_count">0</span></p>
           </div>
           <div id="modal1" class="modal bottom-sheet">
             <div class="modal-content black white-text">
